--- a/BSPracaInzynierska/Client/Pages/Index.razor
+++ b/BSPracaInzynierska/Client/Pages/Index.razor
@@ -11,7 +11,7 @@ Welcome to your new app.
 
 <div class="container mx-auto">
     <div class="progress">
-        <div class="progress-bar bg-warning" role="progressbar" style="width: @val" aria-valuenow="@valw" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar bg-warning" role="progressbar" style="width: 25%" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
 </div>
 <a class="btn btn-primary" @onclick="StartTimer">Dodaj</a>
